tests/seLinux/gatekeeper.yaml
../../submodules/gatekeeper-library/library/pod-security-policy/selinux/samples/psp-selinux-v2/constraint.yaml
